# Fluidix

./: CMakeLists.txt  README.md
build_legacy/: CMakeCache.txt  FluidixLegacy  Makefile  cmake_install.cmake
build_legacy/mod/: control_parameters.mod  flow.mod  precisions.mod
include/: ConservedVariables.h  GasModel.h  GnuplotWriter1D.h  Grid1D.h  HLLCFlux.h  MUSCLReconstructor1D.h  RK3.h  RusanovFlux.h  SlopeLimiter.h  Solver1D.h  TimeIntegrator.h  VTKWriter1D.h
legacy/: face_velocity.f90  links.f90  main.f90  modules.f90  pres_correct.f90  rho_face.f90  solve_pp.f90  solve_x_mom.f90  solve_y_mom.f90  tridiag.f90  uv_correct.f90
scripts/: compute_L2_error.py  plot.gnu  plot_grid_convergence.py  plot_solver_solution.py  run.py  sod.py  sod_analytical.py
sod_env/: pyvenv.cfg
src/: ConservedVariables.cpp  GasModel.cpp  GnuplotWriter.cpp  Grid1D.cpp  HLLCFlux.cpp  MUSCLReconstructor1D.cpp  RK3.cpp  RusanovFlux.cpp  Solver1D.cpp  VTKWriter1D.cpp  main.cpp
